# ha-evnex

./: .gitignore  docker-compose.yaml  pyproject.toml
.docker/config/: configuration.yaml
.docker/services/: run
custom_components/evnex/: __init__.py  button.py  config_flow.py  entity.py  manifest.json  models.py  number.py  sensor.py  strings.json  switch.py
custom_components/evnex/translations/: en.json
