[project]
name = "evnex-ha"
version = "0.7.9"
description = "Home Assistant integration for EVNEX EV chargers"
authors = [
    {name = "Brian Thorne", email = "brian@hardbyte.nz"},
]
requires-python = ">=3.13"
dependencies = [
    "homeassistant >= 2025.1.0",
    "evnex >= 0.5.0",
]

[dependency-groups]
dev = [
    "pytest >=8.1.1,<9",
    "ruff<1.0.0,>=0.1.4",
    "pre-commit>=4.3.0",
    "pre-commit-uv>=4.1.4"
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.mypy]
python_version = "3.13"
check_untyped_defs = true
ignore_missing_imports = true
explicit_package_bases = true
namespace_packages = true
mypy_path = "."

